Fix T70060: Add bgl wrapper for glVertexAttribIPointer